--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -20,3 +20,8 @@
 .footer p{
     color: white;
 }
+@media only screen and (max-width: 600px) {
+    .footer svg {
+      font-size: 50px;
+    }
+  }
